--- a/css/banner.css
+++ b/css/banner.css
@@ -1,36 +1,27 @@
-body {
-    margin: 0;
-    
-}
+
 
 .banner {
-
     height: 350px;
     position: absolute;
     top: 70px;
-    left: 198px;
-
-
+    left: 150px;
 }
 
 .banner-list {
     display: flex;
-    /* justify-content: space-between; */
     justify-content: center;
-    
 }
+
 /* CSS Banner-main */
 .banner-main {
-
-    min-width: 950px;
-    height: 320px;
+    min-width: 940px;
+    height: 310px;
     position: relative;
     overflow: hidden;
     border-radius: 5px;
     border-color: #c5d097;
     box-sizing: border-box;
-    border: 1px solid  #a43441;
-    
+    border: 1px solid #a43441;
 }
 
 .banner1 {
@@ -38,17 +29,13 @@ body {
     height: 100%;
     display: flex;
     width: max-content;
-  
 }
 
 .banner1 img {
-    width: 950px;
+    width: 940px;
     height: 100%;
     object-fit: cover;
-    /*tự thu phóng hình khi bị bóp*/
-
 }
-
 
 .banner-main .buttons {
     position: absolute;
@@ -61,7 +48,6 @@ body {
 .banner-main .buttons button {
     width: 30px;
     height: 80px;
-
     background-color: rgba(228, 207, 207, 0.333);
     color: #705a5a;
     border: none;
@@ -103,39 +89,74 @@ body {
 }
 
 /* CSS banner aside */
-.banner-aside {
-
+.banner-second {
     display: flex;
     flex-direction: column;
     margin-left: 10px;
-    width: 250px;
-    height: 320px;
+    width: 260px;
+    height: 310px;
 }
-.banner-aside img{
-    object-fit: cover;
-    width: 100%;
-    height: 100px;
-    border-radius: 3px;
 
+.banner-second img {
+    /* object-fit: cover; */
+    width: 100%;
+    min-height: 100px;
+    border-radius: 3px;
 }
+
+.banner-second a {
+    display: flex;
+    justify-content: center; /* Căn giữa nội dung bên trong thẻ a theo chiều ngang */
+    align-items: center; /* Căn giữa nội dung bên trong thẻ a theo chiều dọc */
+    height: 100%; /* Đảm bảo thẻ a chiếm toàn bộ chiều cao của thẻ div cha */
+   
+}
+
+   
 .banner2 {
     flex: 0.5;
-    border: 2px solid;    
+    background-color: rgb(172, 37, 37);
+    position: relative;
+   box-shadow: 0 0 15px rgb(172, 37, 37);
+   animation: animate alternate 0.5s infinite;
 
+}
+@keyframes animate {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.05);
+    }
+}
+
+.banner2 a{
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+
+}
+.banner-second .banner2 img{
+   position: absolute;
+   top: -25px;
+   right: -95px;
+   
 }
 
 .banner3 {
     flex: 0.5;
+    margin: 5px 0;
     border: 2px solid;
-    margin: 10px 0;
-
 }
+
 .banner4 {
     flex: 0.5;
     border: 2px solid;
-
 }
+
 .banner2, .banner3, .banner4 {
-  border-radius: 5px;
-  border-color: rgb(2, 132, 139);
+    border-radius: 5px;
+    border-color: rgb(2, 132, 139);
+
 }
