--- a/css/base.css
+++ b/css/base.css
@@ -29,4 +29,10 @@ body{
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     box-sizing: border-box;
+    display: block;
+
+}
+.container {
+    margin:0 auto;  
+    max-width: 1200px;
 }
