--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,4 @@
+
 .header {
     max-width: 100%;
     height: 60px;
@@ -13,6 +14,8 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1000;
+   
  
 }
     /* CSS thanh tìm kiếm */
@@ -98,37 +101,17 @@
     background-color: rgba(255, 255, 255, 0.5);
     border-color: rgb(6, 101, 106);
     color: darkred;
-    
-
+    transform: scale(1.05);
+}
+.check-order a:hover {
+    background-color: transparent;
+    border-color: transparent;
+ color: white;
+    transform: scale(0.95);
 }
 
-/* CSS tư vẫn miễn phí */
-.freeConsultation  {
-    margin: 5px 5px 0px 5px ;
-    text-decoration: none;
-    width: 110px;
-    height: 100%;
-    box-sizing: border-box;
-    position: relative;
-    display: block;
-    text-align: center;
-}
-.freeConsultation b {
-    position: absolute;
-    top: 14px;
-    left: 15px;
-    font-style: normal;
-    color: rgb(237, 212, 163);
-}
-
-.freeConsultation span {
-    color: white;
-    position: absolute;
-    bottom: 6px;
-    left: 8px;
 
 
-}
     /* CSS giỏ hàng */
 .header-cart {
     width: 45px;
@@ -196,39 +179,9 @@
 
 
 
-@media (max-width: 1212px) {
-   .header{
-    font-size: 13px;
-   }
-   /* .freeConsultation  {
 
-    width: calc(135px - 30px);
-
-} */
-.freeConsultation span {
-
-    bottom: 6px;
-    left: 8px;
-}
-
-/* .header-search {
-
-    width: calc( 310px - 20px );
-
-
-} */
-
-
-}
-@media (max-width: 1106px){
-    .navbar {
-      
-        margin-left: 10px;
-    
-    }
-}
-@media (max-width: 1086px){
-  .navbar-item-link span {
+@media (max-width: 1156px){
+  .navbar-list span {
     display: none;
   }
 
@@ -241,18 +194,24 @@
 
 
 } 
-@media (max-width: 942px) {
+@media (max-width: 930px) {
     .navbar-list {
         display: none;
     }
+
+    .header-search{
+        width: calc(50% + 20px);
+    }
 }
-@media (max-width: 652px) {
-.freeConsultation{
-    display: none;
-}}
+@media (max-width: 724px) {
+
+.header-cart{
+    margin-right: 5px;
+}
+}
 @media (max-width: 562px) {
     .header-search{
-        width: calc(300px - 10%);
+        width: calc(300px - 15%);
     }
 
 }
