--- a/css/header.css
+++ b/css/header.css
@@ -88,8 +88,8 @@
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
+    text-transform: uppercase;
 }
-
 .navbar-list a img {
     width: 25px;
     height: 30px;
@@ -169,7 +169,7 @@
     text-decoration: none;
     position: absolute;
     bottom: 2px;
-    left: 16px;
+    left: 10px;
 
 }
 .log-in:hover {
@@ -180,7 +180,7 @@
 
 
 
-@media (max-width: 1156px){
+@media (max-width: 1218px){
   .navbar-list span {
     display: none;
   }
