modified:   css/banner.css 	modified:   css/base.css 	modified:   css/header.css 	new file:   css/hot-prod.css 	deleted:    images/header-icon/cart-icon.jpg 	deleted:    images/header-icon/check-order.jpg 	deleted:    images/header-icon/check-order.png 	deleted:    images/header-icon/check-order.webp 	new file:   images/hot-prod/cart-icon.png 	new file:   images/hot-prod/laptop/asus-vivobook-flip-tp470ea-i3-ec027t.jpg 	new file:   images/hot-prod/laptop/gpu.webp 	new file:   images/hot-prod/mobile/galaxy-s24-ultra-5g-xam.jpg 	new file:   images/hot-prod/mobile/iphone-14-pro-max-tim.jpg 	new file:   images/hot-prod/mobile/iphone-15-pro-max.jpg 	new file:   images/hot-prod/mobile/oppo-reno11-pro-5g-den.jpg 	new file:   images/hot-prod/mobile/oppo-reno12-5g.jpg 	new file:   images/hot-prod/mobile/samsung-galaxy-fold5-5g.jpg 	new file:   images/hot-prod/mobile/ss-s24-ultra-xam.webp 	modified:   index.html

--- a/css/banner.css
+++ b/css/banner.css
@@ -3,7 +3,8 @@
 .banner {
     height: 350px;
     position: absolute;
-    top: 70px;
+    top: 35px;
+    position: relative;
 }
 
 .banner-list {
