--- a/css/base.css
+++ b/css/base.css
@@ -26,12 +26,12 @@ p{
 body{
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    font-family: Roboto, sans-serif;
+    background-color: rgba(255,255,255,0.8);
     box-sizing: border-box;
     display: block;
 }
-.container {
+#container {
     margin:0 auto;  
     max-width: 1200px;
 }
