modified:   css/apple.css 	modified:   css/banner.css 	modified:   css/base.css 	modified:   css/footer.css 	modified:   css/header.css 	modified:   css/hot-prod.css 	modified:   css/mobile.css 	modified:   index.html 	modified:   mobile.html 	modified:   mobile/apple.html 	modified:   orderInfo.html

--- a/css/apple.css
+++ b/css/apple.css
@@ -4,7 +4,7 @@ body {
     font-family: Roboto, sans-serif;
 }
 .cps-container {
-    width: 100%;
+    width: 80%;
     padding: 5px;
     margin: 0 auto;
     background-color: #f8f9fa;
@@ -42,14 +42,14 @@ body {
     width: 100%;
     padding: 10px;
     margin: 0 auto;
-    background-color: white;
+    /* background-color: white; */
 }
 
 .list-brand >nav{
     display: flex; 
     flex-wrap: wrap;
     line-height: 40px;
-    color: white;   
+
 }
 
 .list-brand >nav >a{
