--- a/css/base.css
+++ b/css/base.css
@@ -29,12 +29,27 @@ body{
     font-family: Roboto, sans-serif;
     background-color: rgba(255,255,255,0.8);
     box-sizing: border-box;
-    display: block;
+    /* display: block; */
 }
-#container {
-    margin:0 auto;  
-    max-width: 1200px;
+article {
+    margin: 0 auto;  
     position: relative;
+    /* position: relative; */
+ 
+
+}
+iframe{
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+
+}
+
+.app {
+    margin: auto;
 }
 
 
