--- a/css/banner.css
+++ b/css/banner.css
@@ -1,10 +1,17 @@
 
-
+* {
+    box-sizing: border-box;
+    
+  }
+  
 .banner {
+    max-width: 1199px;
     height: 350px;
-    position: absolute;
-    top: 35px;
-    position: relative;
+    /* position: absolute; */
+    /* top: 35px; */
+    /* position: absolute; */
+    box-sizing: border-box;
+    
 }
 
 .banner-list {
