--- a/css/header.css
+++ b/css/header.css
@@ -13,11 +13,13 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 1;
 
 
 }
-
+.logo a{
+    text-decoration: none;
+}
 /* CSS thanh tìm kiếm */
 .header-search {
     background-color: white;
@@ -141,6 +143,49 @@
     text-decoration: none;
     color: #f7f7f7;
 }
+/* giỏ hàng không sản phẩm */
+.header-cart {
+    position: relative; /* Ensure child elements are positioned relative to this container */
+}
+
+.header-cart .cart-no-item {
+    position: absolute;
+    width: 390px;
+    height: 222px;
+    top: 49px;
+    right: -4px;
+    object-fit: contain;
+    box-shadow: 0 0 5px gray;
+    display: none; /* Hidden by default */
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    
+}
+
+.header-cart .cart-no-item img {
+    width: 50%;
+    height: 50%;
+}
+
+.header-cart:hover .cart-no-item {
+    display: flex; /* Use flex to center the image */
+}
+
+.header-cart::after {
+    content: "";
+    position: absolute;
+    right: 15px;
+    top: 20px;
+    border-width: 15px;
+    border-style: solid;
+    border-color: transparent transparent white transparent; /* Triangle pointing up */
+    display: none;
+}
+.header-cart:hover::after {
+   display: block;
+}
+
 
 /* CSS đăng nhập */
 .log-in {
