--- a/css/base.css
+++ b/css/base.css
@@ -35,6 +35,7 @@ article {
     margin: 0 auto;  
     position: relative;
     /* position: relative; */
+    
  
 
 }
@@ -44,12 +45,19 @@ iframe{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+
    
 
 }
 
 .app {
+    
+    max-width: 1240px;
     margin: auto;
+
 }
 
 
