--- a/admin/templates/css/style.css
+++ b/admin/templates/css/style.css
@@ -67,8 +67,35 @@ body {
     white-space: nowrap;
     flex-shrink: 0;
 }
+.nav ul ul {
+    position: absolute;
+    display: none;
+    padding: 0px;
+    margin: 0px;
+    list-style: none;
+    border-radius: 3px;
+    width: 200px;
+    background-color: white;
+    box-shadow: 0 0 1px gray;
+}
 
+.nav ul ul a {
+    display: block;
+    line-height: 30px;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 0 10px;
+}
+.nav>ul>li:hover>ul {
+    display: block;
+}
 
+.nav ul ul a:hover {
+    background-color:  rgb(2, 132, 139);
+    color: white;
+
+}
 .search-form {
     display: flex;
     max-width: 600px;
@@ -92,58 +119,131 @@ body {
 .dropdown {
     position: relative;
     display: inline-block;
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    margin-right: 10px;
+}
+
+.dropdown-toggle {
     display: flex;
-    justify-content: flex-end;
     align-items: center;
-    height: 100vh;
-    padding-right: 20px;
+    text-decoration: none;
 }
 
 .avatar {
     border-radius: 50%;
-}
-
-.dropdown-arrow {
-    margin-left: 10px;
-    font-size: 20 px;
-    color: #000;
+    margin-right: 5px;
 }
 
 .dropdown-menu {
     display: none;
     position: absolute;
-    right: 0;
-    background-color: white;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    padding: 12px 0;
-    margin-top: 10px;
-    list-style: none;
-    border-radius: 0.25rem;
-    width: 150px;
+    background-color: #f9f9f9;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    padding: 0;
+    margin:0;
+    list-style-type: none;
 }
 
-.dropdown-item {
-    padding: 8px 16px;
-    text-decoration: none;
-    color: black;
+.dropdown:hover .dropdown-menu {
     display: block;
 }
 
-.dropdown-item:hover {
-    background-color: white;
+.dropdown-menu li {
+    padding: 0;
 }
 
-.dropdown-divider {
-    height: 1px;
-    margin: 8px 0;
-    background-color: #e5e5e5;
+.dropdown-menu li a {
+    display: block;
+    padding: 5px;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.dropdown-menu li a:hover {
+    background-color: rgb(2, 132, 139);
+    color: white;
+}
+.dropdown-right {
+    position: relative;
+}
+
+.dropdown-right .dropdown-menu {
+    margin-top: 5px;
+    right: 5px;
+    left: auto;
+}
+
+/*--------------------------------------------------------------*/
+.admin-content-cartegory_add{
+    margin-top: 70px;
+    padding-left: 20px;
+}
+.admin-content-cartegory_add input{
+    width: 200px;
+    height: 30px;
+    padding-left: 12px;
+    margin-top: 15px;
+}
+.admin-content-cartegory_add button{
+    display: block;
+    margin-top: 10px;
+    height: 30px;
+    width: 100px;
+    cursor: pointer;
+    background-color: brown;
     border: none;
+    color: white;
+    border-radius: 5px;
+}
+/*-------------------------------------------------------*/
+.admin-content-cartegory_list {
+    margin-top: 70px;
 }
 
-.index {
-    top: 70px;
-    position: absolute;
+.admin-content-cartegory_list h2 {
+    margin-bottom: 20px;
+    color: #333;
 }
+
+.admin-content-cartegory_list table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+.admin-content-cartegory_list th, 
+.admin-content-cartegory_list td {
+    border: 1px solid #ddd;
+    padding: 12px;
+    text-align: left;
+    width: 20px;
+    text-align: center;
+}
+
+.admin-content-cartegory_list th {
+    background-color: #f2f2f2;
+    color: #333;
+    font-weight: bold;
+}
+/*---------------------------------------------*/
+.admin-content-product_add{
+    margin-left: 10px;
+    margin-top: 70px;
+}
+.admin-content-product_add input,select{
+    width: 200px;
+    height: 30px;
+    display: block;
+    margin: 20px 0;
+}
+.admin-content-product_add textarea{
+    display: block;
+    margin: 20px 0;
+}
+.phone-specs, .laptop-specs {
+    display: none;
+  }
