--- a/css/iphone15.css
+++ b/css/iphone15.css
@@ -1,9 +1,12 @@
 body {
     padding: 15px;
     margin: 15px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
     font-family: Roboto, sans-serif;
-}
-
+  }
 .mobile-container {
     width: 100%;
     padding: 5px;
