--- a/css/hot-prod.css
+++ b/css/hot-prod.css
@@ -93,8 +93,8 @@ h2 {
 }
 
 .laptop-link img {
-    /* width: 200px;
-    height: 250px; */
+    width: 200px;
+    height: 250px;
     padding: 25px 0;
 
 }
