--- a/css/hot-prod.css
+++ b/css/hot-prod.css
@@ -61,17 +61,28 @@ h2 {
 
 }
 
-.mobile-link .love-icon  {
-   
+.mobile-link .love-icon {
+
     display: flex;
     font-size: 15px;
     margin: 10px 5px 0 5px;
     justify-content: space-between;
 }
+
 .mobile-link .love-icon .detail-star {
     margin-top: 10px;
 }
+.laptop-link .love-icon {
 
+    display: flex;
+    font-size: 15px;
+    margin: 10px 5px 0 5px;
+    justify-content: space-between;
+}
+
+.laptop-link .love-icon .detail-star {
+    margin-top: 10px;
+}
 
 .love-icon img:hover {
     transform: scale(1.05);
@@ -92,7 +103,7 @@ h2 {
 
 }
 
-.laptop-link img {
+.laptop-link>a>img {
     width: 200px;
     height: 250px;
     padding: 25px 0;
@@ -105,12 +116,14 @@ h2 {
     padding-left: 5px;
     height: 40px;
 }
+
 .mobile-link .price,
 .laptop-link .price {
     text-align: start;
     padding-left: 5px;
     /* padding-bottom: 5px; */
 }
+
 .mobile-link .price,
 .laptop-link .price {
     margin-top: 10px;
